--- a/index.qmd
+++ b/index.qmd
@@ -1,12 +1,12 @@
 ---
 title: "Preliminary Research"
 author: "Group 2"
-date: June 26, 2025
-format: 
+date: "June 26, 2025"
+format:
   html:
+    toc: true
     bibliography: references.bib
     csl: csl/econometrica.csl
-    toc: true
 ---
 
 # Problem
